[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reddit-comment-harvester"
version = "0.1.1"
description = "Extract Reddit threads and comment trees for research and analysis"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Wiley", email = "wiley@example.com"}
]
keywords = ["reddit", "comments", "research", "data-analysis", "scraper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/wlyastn/reddit-comment-harvester"
Documentation = "https://github.com/wlyastn/reddit-comment-harvester/blob/main/README.md"
Repository = "https://github.com/wlyastn/reddit-comment-harvester"
Issues = "https://github.com/wlyastn/reddit-comment-harvester/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["reddit_comment_harvester*"]
